--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,44 @@
-<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
-</ion-header>
+
+<ion-content>
+  <ion-fab left bottom>
+    <button ion-fab color="light"><ion-icon name="arrow-dropright"></ion-icon></button>
+    <ion-fab-list side="right">
+      <button ion-fab><ion-icon name="logo-facebook"></ion-icon></button>
+      <button ion-fab><ion-icon name="logo-twitter"></ion-icon></button>
+      <button ion-fab><ion-icon name="logo-vimeo"></ion-icon></button>
+      <button ion-fab><ion-icon name="logo-googleplus"></ion-icon></button>
+      <button ion-fab menuToggle><ion-icon name="home"></ion-icon></button>
+    </ion-fab-list>
+  </ion-fab>
+</ion-content>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+  <ion-content class="card-background-page">
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+    <ion-card>
+      <img src="/assets/imgs/1.jpg"/>
+      <div class="card-title">São Paulo</div>
+      <div class="card-subtitle">41 Listings</div>
+    </ion-card>
+
+    <ion-card>
+      <img src="/assets/imgs/2.jpg"/>
+      <div class="card-title">Amsterdam</div>
+      <div class="card-subtitle">64 Listings</div>
+    </ion-card>
+
+    <ion-card>
+      <img src="/assets/imgs/1.jpg"/>
+      <div class="card-title">San Francisco</div>
+      <div class="card-subtitle">72 Listings</div>
+    </ion-card>
+
+    <ion-card>
+      <img src="/assets/imgs/2.jpg"/>
+      <div class="card-title">Madison</div>
+      <div class="card-subtitle">28 Listings</div>
+    </ion-card>
+
+  </ion-content>
 </ion-content>
