--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -21,3 +21,17 @@
     You navigated here from <b>{{selectedItem.title}}</b>
   </div>
 </ion-content>
+
+<ion-content>
+  <ion-fab left bottom>
+    <button ion-fab color="light"><ion-icon name="arrow-dropright"></ion-icon></button>
+    <ion-fab-list side="right">
+      <button ion-fab><ion-icon name="logo-facebook"></ion-icon></button>
+      <button ion-fab><ion-icon name="logo-twitter"></ion-icon></button>
+      <button ion-fab><ion-icon name="logo-vimeo"></ion-icon></button>
+      <button ion-fab><ion-icon name="logo-googleplus"></ion-icon></button>
+      <button ion-fab menuToggle><ion-icon name="home"></ion-icon></button>
+    </ion-fab-list>
+  </ion-fab>
+</ion-content>
+
